--- a/src/main/resources/templates/gestionentradas.html
+++ b/src/main/resources/templates/gestionentradas.html
@@ -108,16 +108,16 @@
                             <circle id="12" cx="600" cy="50" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
                             <circle id="13" cx="50" cy="100" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
                             <circle id="14" cx="100" cy="100" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
-                            <circle id="15" cx="150" cy="100" r="20" stroke="black" stroke-width="3" fill="yellow" />
-                            <circle id="16" cx="200" cy="100" r="20" stroke="black" stroke-width="3" fill="yellow" />
-                            <circle id="17" cx="250" cy="100" r="20" stroke="black" stroke-width="3" fill="yellow" />
-                            <circle id="18" cx="300" cy="100" r="20" stroke="black" stroke-width="3" fill="yellow" />
-                            <circle id="19" cx="350" cy="100" r="20" stroke="black" stroke-width="3" fill="yellow" />
-                            <circle id="20" cx="400" cy="100" r="20" stroke="black" stroke-width="3" fill="yellow" />
-                            <circle id="21" cx="450" cy="100" r="20" stroke="black" stroke-width="3" fill="yellow" />
-                            <circle id="22" cx="500" cy="100" r="20" stroke="black" stroke-width="3" fill="yellow" />
-                            <circle id="23" cx="550" cy="100" r="20" stroke="black" stroke-width="3" fill="yellow" />
-                            <circle id="24" cx="600" cy="100" r="20" stroke="black" stroke-width="3" fill="yellow" />
+                            <circle id="15" cx="150" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
+                            <circle id="16" cx="200" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
+                            <circle id="17" cx="250" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
+                            <circle id="18" cx="300" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
+                            <circle id="19" cx="350" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
+                            <circle id="20" cx="400" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
+                            <circle id="21" cx="450" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
+                            <circle id="22" cx="500" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
+                            <circle id="23" cx="550" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
+                            <circle id="24" cx="600" cy="100" r="20" stroke="black" stroke-width="3" fill="red" />
                             <circle id="25" cx="50" cy="150" r="20" stroke="black" stroke-width="3" fill="red" />
                             <circle id="26" cx="100" cy="150" r="20" stroke="black" stroke-width="3" fill="red" />
                             <circle id="27" cx="150" cy="150" r="20" stroke="black" stroke-width="3" fill="#92bcea" />
@@ -150,10 +150,6 @@
                             <div class="d-flex libre me-3">
                                 <div class="muestra me-1"></div>
                                 <h6>LIBRE</h6>
-                            </div>
-                            <div class="d-flex seleccionado me-3">
-                                <div class="muestraselec me-1"></div>
-                                <h6>SELECCIONADO</h6>
                             </div>
                             <div class="d-flex ocupado me-3">
                                 <div class="muestraocup me-1"></div>
