--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -80,7 +80,7 @@
                     <th:block th:unless="${session.u}">
                         <ul class="navbar-nav ms-auto me-5">
                             <li class="nav-item mx-2">
-                                <a class="nav-link" th:href="@{/login}" href="/login">Login</a>
+                                <a class="nav-link text-light" th:href="@{/login}" href="/login">Login</a>
                             </li>
                             <!--/*
                                 Esto es un comentario "thymeleaf" - no se verá en el HTML
