--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <th:block th:replace="fragments/head :: header" />
-    <title>IW: Login</title>
+    <title>FilmAdmin</title>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -11,9 +11,9 @@
 
     <main class="flex-shrink-0">
         <div class="container">
-            <form class="form-signin" method="post" th:action="@{/login}">
-                <h2 class="form-signin-heading">Please sign in</h2>
-                <p>
+            <form class="form-signin login d-flex flex-column align-items-center" method="post" th:action="@{/login}">
+                <h2 class="form-signin-heading mt-5">Bienvenido a FilmAdmin</h2>
+                <p class="mt-3">
                     <label for="username" class="visually-hidden">Username</label>
                     <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="required">
                 </p>
@@ -21,7 +21,7 @@
                     <label for="password" class="visually-hidden">Password</label>
                     <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="required">
                 </p>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                <button class="btn btn-lg btn-dark btn-block mt-3" type="submit">Iniciar sesión</button>
             </form>
         </div>
     </main>
