--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,8 @@
     <main class="flex-shrink-0">
         <div class="container">
             <form class="form-signin login d-flex flex-column align-items-center" method="post" th:action="@{/login}">
-                <h2 class="form-signin-heading mt-5">Bienvenido a FilmAdmin</h2>
+                <img th:src="@{/img/filmadminlogowhite.png}" src="/img/filmadminlogowhite.png" alt="logo IW" width="269" height="88"
+                        class="d-inline-block align-text-top">
                 <p class="mt-3">
                     <label for="username" class="visually-hidden">Username</label>
                     <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="required">
@@ -21,7 +22,11 @@
                     <label for="password" class="visually-hidden">Password</label>
                     <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="required">
                 </p>
-                <button class="btn btn-lg btn-dark btn-block mt-3" type="submit">Iniciar sesión</button>
+                <div class="d-flex">
+                    <button class="btn btn-lg btn-dark btn-block mt-3 me-2" type="submit">Iniciar sesión</button>
+                    <button class="btn btn-lg btn-dark btn-block mt-3 ms-2" type="submit">Registro</button>
+                </div>
+                
             </form>
         </div>
     </main>
