Formulario de Registro

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
                 </p>
                 <div class="d-flex">
                     <button class="btn btn-lg btn-dark btn-block mt-3 me-2" type="submit">Iniciar sesión</button>
-                    <button class="btn btn-lg btn-dark btn-block mt-3 ms-2" type="submit">Registro</button>
+                    <a th:href="@{/registro}"> <button class="btn btn-lg btn-dark btn-block mt-3 ms-2" type="button">Registro</button> </a>
                 </div>
                 
             </form>
