--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -21,7 +21,7 @@
                     </p>
                     <p class="ms-4">
                         <label for="email" class="visually-hidden">Correo</label>
-                        <input type="text" class="form-control" placeholder="correo@filmadmin.es" id="email" name="email" required="required">
+                        <input type="email" class="form-control" placeholder="correo@filmadmin.es" id="email" name="email" required="required">
                     </p>
                 </div>
                 <div class="d-flex justify-content-between mt-2">
@@ -60,7 +60,7 @@
                 
                 
                 
-                
+         
                 <div class="d-flex">
                     <button class="btn btn-lg btn-dark btn-block mt-3 ms-2" type="submit">Registrarse</button>
                 </div>
