--- a/src/main/resources/templates/pelicula.html
+++ b/src/main/resources/templates/pelicula.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="d-flex align-items-center mt-5">
                 <h1>El buen patrón</h1>
-                <select class="form-select w-50 h-50 ms-auto" aria-label="Seleccion de Cine">
+                <select class="form-select filtropelicula h-50 ms-auto" aria-label="Seleccion de Cine">
                     <option selected>Seleccione un cine</option>
                     <option value="1">Madrid - La Gavia</option>
                     <option value="2">Madrid - Plaza Rio 2</option>
@@ -21,6 +21,15 @@
                     <option value="4">Barcelona -  Diagonal</option>
                     <option value="5">Valencia - Bonaire</option>
                 </select>
+                <select class="form-select filtropelicula ms-3" aria-label="Seleccion de Sala" disabled>
+                    <option selected>Seleccione una sala</option>
+                    <option value="1">Sala 1</option>
+                    <option value="2">Sala 2</option>
+                    <option value="3">Sala 3</option>
+                    <option value="4">Sala 4</option>
+                    <option value="5">Sala 5</option>
+                </select>
+                <input type="date" class="form-control filtropelicula ms-3 me-auto" value="2022-03-01" id="fecha" name="fecha" required="required">
             </div>
             <div class="d-flex mt-5 align-items-center">
                 <img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen pelicula" width="210px" height="300px" class="d-inline-block">
